--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
+    "bootstrap-vue": "^1.0.2",
     "vue": "^2.4.2",
     "vue-markdown": "^2.2.4",
     "vue-router": "^2.7.0"
@@ -75,6 +77,7 @@
     "shelljs": "^0.7.6",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
+    "style-loader": "^0.19.0",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.0.4",
     "vue-style-loader": "^3.0.1",
