--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "bootstrap-vue": "^1.0.2",
+    "normalize.css": "^7.0.0",
     "vue": "^2.4.2",
     "vue-markdown": "^2.2.4",
     "vue-router": "^2.7.0"
